--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,15 @@ __pycache__/
 *.py[cod]
 *$py.class
 .vscode/
+*.yaml
+*.yml
+
+fast-DiT/results
+fast-DiT/log
 
 # C extensions
 *.so
+
 
 # Distribution / packaging
 .Python
